<?xml version="1.0"?>
<package>
  <name>cl_feature_constraints</name>
  <version>0.1.0</version>
  <description>
    Common Lisp library for specifying motions using features and constraints.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/cram-code/cl_robotics_libs/issues</url>
  <url type="repository">https://github.com/cram-code/cl_robotics_libs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sbcl</build_depend>
  <build_depend>cl_transforms</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>cl_transforms</run_depend>
</package>
