<?xml version="1.0"?>
<package>
  <name>cl_robot_models</name>
  <version>0.1.0</version>
  <description>
    Common Lisp library for kinematic and dynamic robot representations.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/cram-code/cl_robotics_libs/issues</url>
  <url type="repository">https://github.com/cram-code/cl_robotics_libs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sbcl</build_depend>

  <run_depend>sbcl</run_depend>
</package>