<?xml version="1.0"?>
<package>
  <name>cl_robotics_libs</name>
  <version>0.1.0</version>
  <description>
    A set of Common Lisp libraries providing basic data
    structures for robotics applications.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/cram-code/cl_robotics_libs/issues</url>
  <url type="repository">https://github.com/cram-code/cl_robotics_libs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>cl_3d_shapes</run_depend>
  <run_depend>cl_human_shapes</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
